# face_recognition_gstreamer

./: CMakeLists.txt
include/: face_detection.h
src/: face_detection.cpp  face_detector.cpp  main.cpp
